# vpn-bot

./: .example.env  .gitignore  pyproject.toml
app/core/: settings.py
