[tool.poetry]
name = "bot"
version = "0.1.0"
description = ""
authors = ["AmirMahdi Qiasvand <amirmahdiqiasvand@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.10.3"
pydantic-settings = "^2.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
